ecmascript/parser/tests/typescript-errors/tsc/es6/for-ofStatements/for-of2/input.ts.stderr
error[1155]: 'const' declarations must be initialized
 --> $DIR/tests/typescript-errors/tsc/es6/for-ofStatements/for-of2/input.ts:2:7
  |
2 | const v;
  |       ^

